--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,25 +4,37 @@ body {
 
 .container {
   margin: 0 auto;
-  width: 1000px;
 }
 
 header {
-  font-size: 30px;
+  padding: 40px;
+  font-size: 33px;
   text-align: center;
   font-weight: bold;
 }
 
 .usercontainer{
+  margin: 20px;
   float: left;
-  max-width: 250px;
   text-align: center;
 }
+
+img {
+  width: 250px;
+}
+
+.img {
+  width: 250px;
+}
+
 
 .name {
   text-transform: uppercase;
   font-weight: bold;
-  text-decoration: underline;
+}
+
+.name span {
+  border-bottom: 1px solid #24A059;
 }
 
 .email {
@@ -43,8 +55,8 @@ header {
 
 .ss {
   color: #279727;
-  -webkit-filter: blur(5px);
-  filter: blur(5px);
+  -webkit-filter: blur(3px);
+  filter: blur(3px);
   transition: filter 0 ease;
 
   &:hover {
