--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,9 +1,10 @@
-body {
+ stbody {
   padding: 30px;
 }
 
 .container {
   margin: 0 auto;
+  overflow: auto;
 }
 
 header {
@@ -14,7 +15,7 @@ header {
 }
 
 .usercontainer{
-  margin: 20px;
+  margin: 30px;
   float: left;
   text-align: center;
 }
@@ -31,9 +32,12 @@ img {
 .name {
   text-transform: uppercase;
   font-weight: bold;
+  padding: 10px;
+  font-size: 18px;
 }
 
 .name span {
+  padding-bottom: 2px;
   border-bottom: 1px solid #24A059;
 }
 
@@ -41,16 +45,31 @@ img {
   text-transform: uppercase;
   font-weight: lighter;
   color: lightgrey;
+  padding-top: 5px;
+  padding-bottom: 23px;
+  font-size: 14px;
 
 }
 
 .address {
   text-transform: capitalize;
+  font-weight: lighter;
+  font-size: 14px;
   color: #767676;
+  margin: 0;
+
+}
+
+.address p {
+  margin: 0;
+  padding: 5px;
 }
 
 .number {
   color: #767676;
+  padding: 5px;
+  font-weight: lighter;
+  font-size: 14px;
 }
 
 .ss {
@@ -58,6 +77,7 @@ img {
   -webkit-filter: blur(3px);
   filter: blur(3px);
   transition: filter 0 ease;
+  padding-top: 25px;
 
   &:hover {
     -webkit-filter: blur(0);
